--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "outDir": "dist",
-    "strict": true
+    "strict": true,
+    "isolatedModules": true
   },
   "include": ["*.ts", "core/**/*.ts"],
   "exclude": ["server.ts"]
