--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,7 @@
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "outDir": "dist",
-    "strict": true,
-    "isolatedModules": true
+    "strict": true
   },
   "include": ["*.ts", "core/**/*.ts"],
   "exclude": ["server.ts"]
