feat: Implement AI self-correction for JSON parsing and add model selection
- Eli: Implemented AI self-correction mechanism in `ritual_step_handlers.ts` to handle invalid JSON responses from the AI, prompting it to re-generate valid JSON.
- Nova: Added new `npm run start` scripts in `package.json` for specific Ollama models (mistral, llama3, codellama) and a random model selection.
- Nova: Modified `ollama_interface.ts` to accept a model parameter for queries.
- Nova: Updated `main.ts` and `run_terminal_rituel.ts` to pass the selected model to the AI query functions.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "start-debug": "nodemon --inspect-brk --exec \"node --trace-warnings --loader ts-node/esm\" main.ts",
     "start": "nodemon --exec \"node --trace-warnings --loader ts-node/esm\" main.ts",
     "build": "tsc",
-    "dev": "nodemon --watch . --exec ts-node-esm main.ts"
+    "dev": "nodemon --watch . --exec ts-node-esm main.ts",
+    "start:mistral": "npm run start -- --model mistral",
+    "start:llama3": "npm run start -- --model llama3",
+    "start:codellama": "npm run start -- --model codellama:7b-instruct",
+    "start:random": "npm run start -- --model random"
   },
   "dependencies": {
     "@types/cors": "^2.8.19",
