--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "json5": "^2.2.3",
     "node-fetch": "^3.3.2",
-    "readline": "^1.3.0"
+    "readline": "^1.3.0",
+    
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@types/node": "^20.19.1",
