--- a/package.json
+++ b/package.json
@@ -5,15 +5,10 @@
   "main": "main.ts",
   "type": "module",
   "scripts": {
-    "start-debug": "nodemon --inspect-brk --exec \"node --trace-warnings --loader ts-node/esm\" main.ts",
-    "start": "nodemon --exec \"node --trace-warnings --loader ts-node/esm\" main.ts",
+    "start": "node launch.js",
     "build": "tsc",
     "test": "node --loader ts-node/esm core/ollama_auto_correction.test.ts",
-    "dev": "nodemon --watch . --exec ts-node-esm main.ts",
-    "start:mistral": "npm run start -- --model mistral",
-    "start:llama3": "npm run start -- --model llama3",
-    "start:codellama": "npm run start -- --model codellama:7b-instruct",
-    "start:random": "npm run start -- --model random"
+    "dev": "nodemon --watch . --exec ts-node-esm main.ts"
   },
   "dependencies": {
     "@types/cors": "^2.8.19",
@@ -24,12 +19,13 @@
     "json5": "^2.2.3",
     "node-fetch": "^3.3.2",
     "readline": "^1.3.0",
-    
-    "zod": "^3.25.67"
+    "zod": "^3.25.67",
+    "yargs": "^17.7.2"
   },
   "devDependencies": {
     "@types/node": "^20.19.1",
     "@types/node-fetch": "^3.0.3",
+    "@types/yargs": "^17.0.32",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
